--- a/src/main/webapp/WEB-INF/data/salesdb.properties
+++ b/src/main/webapp/WEB-INF/data/salesdb.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.3.3
-#Tue Sep 25 05:03:12 UTC 2018
+#Tue Sep 25 05:14:14 UTC 2018
 version=2.3.3
-modified=no
+modified=yes
 tx_timestamp=0
