--- a/src/main/webapp/WEB-INF/data/salesdb.properties
+++ b/src/main/webapp/WEB-INF/data/salesdb.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.3.3
-#Tue Sep 25 05:14:14 UTC 2018
+#Tue Sep 25 08:03:26 UTC 2018
 version=2.3.3
-modified=yes
+modified=no
 tx_timestamp=0
